node-express-login/k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-apl-svc-test
spec:
  selector:
    app: node-test-pod-test
  ports:
  - protocol: TCP
    targetPort: 3000
    port: 3000
