node-express-login/k8s-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.bluemix.net/redirect-to-https: "True"
  name: my-app
  namespace: default
spec:
  rules:
  - host: login.iks1.jp-tok.containers.appdomain.cloud
    http:
      paths:
      - path: /
        backend:
          serviceName: node-apl-svc-test
          servicePort: 3000
  tls:
  - hosts:
    - login.iks1.jp-tok.containers.appdomain.cloud
    secretName: iks1
